# src/main/java/de/entropia/logistiktracking/domain/euro_crate/use_case/EuroCrateUseCase.java
@@ -7,7 +7,6 @@ import de.entropia.logistiktracking.graphql.gen.types.PackingList;
 import de.entropia.logistiktracking.jpa.EuroCrateDatabaseElement;
 import de.entropia.logistiktracking.jpa.PackingListDatabaseElement;
 import de.entropia.logistiktracking.jpa.repo.PackingListDatabaseService;
-import de.entropia.logistiktracking.pdfGen.EuroCratePdfGenerator;
 import de.entropia.logistiktracking.utility.Result;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
@@ -24,7 +23,6 @@ public class EuroCrateUseCase {
 	private final EuroCrateRepository euroCrateRepository;
 	private final PackingListDatabaseService packingListDatabaseService;
 	private final PackingListConverter packingListConverter;
-	private final EuroCratePdfGenerator euroCratePdfGenerator;
 
 	public List<EuroCrate> findAllEuroCrates() {
 		return euroCrateRepository
@@ -45,40 +43,6 @@ public class EuroCrateUseCase {
 		}
 
 		return new Result.Ok<>(packingListConverter.toGraphQl(result.get()));
-	}
-
-	public Result<byte[], PrintEuroCrateError> printEuroCrate(long id) {
-
-		Optional<EuroCrateDatabaseElement> euroPallet = euroCrateRepository.findEuroCrate(id);
-
-		if (euroPallet.isEmpty()) {
-			return new Result.Error<>(PrintEuroCrateError.CrateNotFound);
-		}
-
-		Result<byte[], Void> pdfResult = euroCratePdfGenerator.generatePdf(euroPallet.get());
-		return switch (pdfResult) {
-			case Result.Ok<byte[], Void>(byte[] content) -> new Result.Ok<>(content);
-			default -> new Result.Error<>(PrintEuroCrateError.FailedToGeneratePdf);
-		};
-	}
-
-	@Transactional
-	public Result<Void, ModifyEuroCrateError> modifyEuroCrate(long id) {
-		Optional<EuroCrateDatabaseElement> euroCrate = euroCrateRepository.findEuroCrate(id);
-		if (euroCrate.isEmpty()) return new Result.Error<>(ModifyEuroCrateError.NotFound);
-		EuroCrateDatabaseElement euroCrateDatabaseElement = euroCrate.get();
-
-		// fixme
-		return new Result.Ok<>(null);
-	}
-
-	public enum ModifyEuroCrateError {
-		NotFound
-	}
-
-	public enum PrintEuroCrateError {
-		CrateNotFound,
-		FailedToGeneratePdf
 	}
 
 	public enum FindRelatedPackingListError {
