# src/main/java/de/entropia/logistiktracking/web/EuroCrateRoute.java
@@ -1,34 +1,0 @@
-package de.entropia.logistiktracking.web;
-
-import de.entropia.logistiktracking.auth.HasAuthority;
-import de.entropia.logistiktracking.domain.euro_crate.use_case.EuroCrateUseCase;
-import de.entropia.logistiktracking.openapi.api.EuroCrateApi;
-import de.entropia.logistiktracking.openapi.model.*;
-import de.entropia.logistiktracking.utility.Result;
-import lombok.AllArgsConstructor;
-import org.springframework.core.io.ByteArrayResource;
-import org.springframework.core.io.Resource;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.RequestMapping;
-
-@Controller
-@AllArgsConstructor
-@RequestMapping("/api")
-public class EuroCrateRoute implements EuroCrateApi {
-	private final EuroCrateUseCase euroCrateUseCase;
-
-	@Override
-	@HasAuthority(AuthorityEnumDto.PRINT)
-	public ResponseEntity<Resource> printEuroCrate(Long id) {
-		Result<byte[], EuroCrateUseCase.PrintEuroCrateError> result = euroCrateUseCase.printEuroCrate(id);
-		return switch (result) {
-			case Result.Ok<byte[], EuroCrateUseCase.PrintEuroCrateError> ok ->
-					ResponseEntity.ok(new ByteArrayResource(ok.result()));
-			case Result.Error<byte[], EuroCrateUseCase.PrintEuroCrateError> error -> switch (error.error()) {
-				case CrateNotFound -> ResponseEntity.notFound().build();
-				case FailedToGeneratePdf -> ResponseEntity.internalServerError().build();
-			};
-		};
-	}
-}
