# src/main/java/de/entropia/logistiktracking/web/PrintMultipleRoute.java
@@ -1,14 +1,21 @@
 package de.entropia.logistiktracking.web;
 
-import com.itextpdf.kernel.pdf.PdfReader;
+import com.google.zxing.common.BitMatrix;
+import com.google.zxing.datamatrix.DataMatrixWriter;
+import com.itextpdf.kernel.colors.ColorConstants;
+import com.itextpdf.kernel.geom.PageSize;
+import com.itextpdf.kernel.geom.Rectangle;
+import com.itextpdf.kernel.pdf.PdfDocument;
 import com.itextpdf.kernel.pdf.PdfWriter;
-import de.entropia.logistiktracking.auth.HasAuthority;
-import de.entropia.logistiktracking.domain.euro_crate.use_case.EuroCrateUseCase;
+import com.itextpdf.kernel.pdf.canvas.PdfCanvas;
+import com.itextpdf.layout.Canvas;
+import de.entropia.logistiktracking.jpa.repo.EuroCrateDatabaseService;
+import de.entropia.logistiktracking.jpa.repo.PackingListDatabaseService;
 import de.entropia.logistiktracking.openapi.api.PrintMultipleApi;
-import de.entropia.logistiktracking.openapi.model.AuthorityEnumDto;
 import de.entropia.logistiktracking.openapi.model.PrintMultipleDtoInner;
-import de.entropia.logistiktracking.utility.PdfMerger;
-import de.entropia.logistiktracking.utility.Result;
+import de.entropia.logistiktracking.printing.CrateElement;
+import de.entropia.logistiktracking.printing.LabelElement;
+import de.entropia.logistiktracking.printing.ListElement;
 import lombok.AllArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.core.io.ByteArrayResource;
@@ -17,51 +24,86 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
+import java.nio.ByteBuffer;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
 
 @Controller
 @AllArgsConstructor
 @RequestMapping("/api")
 public class PrintMultipleRoute implements PrintMultipleApi {
-	private final EuroCrateUseCase euroCrateUseCase;
-	private final PdfMerger pdfMerger;
+	private final EuroCrateDatabaseService euroCrateDatabaseService;
+	private final PackingListDatabaseService packingListDatabaseService;
 
 	@SneakyThrows
 	@Override
-	@HasAuthority(AuthorityEnumDto.PRINT)
+//	@HasAuthority(AuthorityEnumDto.PRINT)
 	public ResponseEntity<Resource> printMultipleThings(List<PrintMultipleDtoInner> printMultipleDtoInner) {
-		List<CompletableFuture<Result<byte[], ?>>> theFunny = printMultipleDtoInner.stream().map(this::createJob).toList();
-		PdfReader[] reader = new PdfReader[theFunny.size()];
-		for (int i = 0; i < theFunny.size(); i++) {
-			CompletableFuture<Result<byte[], ?>> resultCompletableFuture = theFunny.get(i);
-			Result<byte[], ?> join = resultCompletableFuture.join();
-			if (join instanceof Result.Error<byte[], ?>) {
-				return switch (join.error()) {
-					case EuroCrateUseCase.PrintEuroCrateError pe -> switch (pe) {
-						case CrateNotFound -> ResponseEntity.notFound().build();
-						case FailedToGeneratePdf -> ResponseEntity.internalServerError().build();
-					};
-					default -> ResponseEntity.notFound().build();
-				};
-			}
-			reader[i] = new PdfReader(new ByteArrayInputStream(join.result()));
-		}
+		List<LabelElement> elements = printMultipleDtoInner.stream().map(this::resolve).toList();
+
 		ByteArrayOutputStream baos = new ByteArrayOutputStream();
-		PdfWriter pw = new PdfWriter(baos);
-		pdfMerger.combineA5Pdfs(pw, reader);
-		for (PdfReader pdfReader : reader) {
-			pdfReader.close();
+		float pageWidth = PageSize.A4.getWidth();
+		float pageHeight = PageSize.A4.getHeight();
+
+		DataMatrixWriter cw = new DataMatrixWriter();
+
+		try (PdfWriter pdfWriter = new PdfWriter(baos);
+			 PdfDocument pdf = new PdfDocument(pdfWriter)) {
+			int cols = 2;
+			int rows = 4;
+
+			float labelWidth = pageWidth / cols;
+			float labelHeight = pageHeight / rows;
+
+			for(int baseIndex = 0; baseIndex < elements.size(); baseIndex += 8) {
+				int inThisPartition = Math.min(elements.size() - baseIndex, 8);
+				PdfCanvas pdfc = new PdfCanvas(pdf.addNewPage());
+
+				for(int i = 0; i < inThisPartition; i++) {
+					int row = i / 2;
+					int col = i % 2;
+					float x = col * labelWidth;
+					float y = pageHeight - (row + 1) * labelHeight;
+
+					Rectangle labelRect = new Rectangle(x, y, labelWidth, labelHeight);
+
+					// Optional: draw a border around the label
+					pdfc.rectangle(labelRect).setStrokeColor(ColorConstants.BLACK).stroke();
+
+					// Put some content in each label
+					Canvas canvas = new Canvas(pdfc, labelRect);
+
+					elements.get(baseIndex + i).add(cw, canvas, labelRect);
+
+					canvas.close();
+				}
+			}
 		}
 		return ResponseEntity.ok(new ByteArrayResource(baos.toByteArray()));
 	}
 
-	private CompletableFuture<Result<byte[], ?>> createJob(PrintMultipleDtoInner it) {
+	public static byte[] convertToBlackWhiteRawData(BitMatrix bm) {
+		int lineWidth = Math.ceilDiv(bm.getWidth(), 8);
+		ByteBuffer bb = ByteBuffer.allocate(lineWidth * bm.getHeight());
+		for (int ix = 0; ix < bm.getWidth(); ix++) {
+			for (int iy = 0; iy < bm.getHeight(); iy++) {
+				int actualIdx = lineWidth * iy + ix / 8;
+				int offset = ix % 8;
+				byte existing = bb.get(actualIdx);
+				byte newValue = (byte) (bm.get(ix, iy) ? 1 : 0);
+				newValue = (byte) (newValue << (7 - offset));
+				bb.put(actualIdx, (byte) (existing | newValue));
+			}
+		}
+		return bb.array();
+	}
+
+	private LabelElement resolve(PrintMultipleDtoInner it) {
 		return switch (it.getType()) {
 			case PrintMultipleDtoInner.TypeEnum.CRATE ->
-					CompletableFuture.supplyAsync(() -> euroCrateUseCase.printEuroCrate(it.getId()));
+					new CrateElement(euroCrateDatabaseService.findById(it.getId()).orElseThrow());
+			case PrintMultipleDtoInner.TypeEnum.LIST ->
+					new ListElement(packingListDatabaseService.findById(it.getId()).orElseThrow());
 		};
 	}
 }
